fix bodu overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,8 @@ body {
   background: #fff;
   font-style: normal;
   font-weight: normal;
+
+  overflow: hidden;
 }
 
 .container {
